--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body{
 	padding: 0;
 	background: url(Apple_Laptop_Wallpaper.jpg) no-repeat;
 	background-size: cover;
-	background-color: #131418
+	background-color: #131418;
 }
 .box{
 	width: 450px;
