--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body{
 	margin: 0;
 	padding: 0;
-	background: url(Apple_Laptop_Wallpaper.jpg) no-repeat;
+	/*background: url(Apple_Laptop_Wallpaper.jpg) no-repeat;*/
 	background-size: cover;
 	background-color: #131418;
 }
